@@ -5,10 +5,14 @@ import androidx.compose.material3.SnackbarVisuals
 
 class PanoSnackbarVisuals(
     override val message: String,
-    val isError: Boolean,
-    override val duration: SnackbarDuration = SnackbarDuration.Short,
+    val isError: Boolean = false,
+    longDuration: Boolean = false,
 ) :
     SnackbarVisuals {
+    override val duration: SnackbarDuration = if (longDuration)
+        SnackbarDuration.Long
+    else
+        SnackbarDuration.Short
     override val actionLabel = null
 
     override val withDismissAction = false
